--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,8 @@
 {
-  "dependencies": {
-  
-  }
+ "name": "spbitec/bitrix_site_module",
+  "type": "library",
+  "description": "spbitec.ru bitrix_site_module",
+  "keywords": [],
+  "homepage": "https://spbitec.ru",
+  "license": "MIT"
 }
